<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:background="@drawable/back"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:background="@drawable/background_view"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:padding="20dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:textStyle="bold"
                android:textSize="30sp"
                android:gravity="center"/>



            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableStart="@drawable/baseline_email"
                android:drawablePadding="12dp"
                android:paddingStart="10sp"
                android:textColor="@color/black"
                android:background="@drawable/edit_text_login"
                android:layout_marginBottom="20dp"
                android:hint="@string/email_text_login" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="30dp"
                android:paddingStart="10sp"
                android:textColor="@color/black"
                android:drawableStart="@drawable/baseline_lock"
                android:hint="@string/edit_text_password"
                android:background="@drawable/edit_text_login"
                android:drawablePadding="12dp" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_authorization"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_authorization_selector"
                android:text="@string/button_authorization"
                android:textAllCaps="false"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/registration_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration_text_login"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_marginBottom="60dp"
                android:layout_gravity="center"/>


        </LinearLayout>
    </RelativeLayout>
</layout>